# umami-python

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  change-log.md  pyproject.toml  pyrefly.toml  pytest.ini  requirements.txt  ruff.toml
.claude/: settings.json
dev-docs/: docstring-review-code-issues.md  followup-distinct-id.md  sugar-dependencies-brief.md
dev-docs/package-guides/: httpx_reference.md  umami_reference.md
docs/: build-timings.json  changelog.html  changelog.md  index.html  license.html  llms-full.txt  llms.txt  package-info.html  package-info.md  robots.txt  search.json  sitemap.xml  skill.md  skills.html
docs/.well-known/agent-skills/: index.json
docs/.well-known/agent-skills/umami/: SKILL.md
docs/.well-known/skills/default/: SKILL.md
docs/reference/: active_users.html  active_users.md  active_users_async.html  active_users_async.md  clear_cloud_api_key.html  clear_cloud_api_key.md  disable.html  disable.md  enable.html  enable.md  errors.OperationNotAllowedError.html  errors.OperationNotAllowedError.md  errors.ValidationError.html  errors.ValidationError.md  heartbeat.html  heartbeat.md  heartbeat_async.html  heartbeat_async.md  index.html  index.md  is_logged_in.html  is_logged_in.md  login.html  login.md  login_async.html  login_async.md  models.LoginResponse.html  models.LoginResponse.md  models.User.html  models.User.md  models.Website.html  models.Website.md  models.WebsiteStats.html  models.WebsiteStats.md  models.WebsiteStatsCmp.html  models.WebsiteStatsCmp.md  models.WebsiteUser.html  models.WebsiteUser.md  models.WebsitesResponse.html  models.WebsitesResponse.md  (+32 more)
plans/01-refinements-for-latest-api/: 01-api-refresh.md  02-cloud-auth.md  03-polish.md  README.md
plans/02-great-docs-site/: 01-scaffold-config.md  02-build-deploy-runbook.md  README.md
umami/: .gitignore  LICENSE  README.md  great-docs.yml  pyproject.toml  requirements.txt  setup.py  skill_extra_body.md  tox.ini
umami/.claude/: settings.local.json
umami/example_client/: client.py  settings-template.json
umami/scripts/: build_docs.py  fix_source_links.py  serve_docs.py
umami/tests/: _mocks.py  conftest.py  test_active_users.py  test_cloud_auth.py  test_config.py  test_distinct_id.py  test_event_extras.py  test_event_url_default.py  test_health.py  test_login.py  test_model_optionality.py  test_revenue.py  test_sample.py  test_sync_async_parity.py  test_tracking_toggle.py  test_validate_event_data.py  test_validate_state.py  test_website_stats.py  test_websites.py
umami/umami/: __init__.py  urls.py
umami/umami/errors/: __init__.py
umami/umami/impl/: __init__.py
umami/umami/models/: __init__.py
