[project]
name = "umami-analytics"
description = "Umami Analytics Client for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = [
    "analytics",
    "website",
    "umami",
]
authors = [
    { name = "Michael Kennedy", email = "michael@talkpython.fm" },
]
classifiers = [
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]
dependencies = [
    "httpx",
    "pydantic",
]
version = "0.2.19"


[project.urls]
Homepage = "https://github.com/mikeckennedy/umami-python"
Tracker = "https://github.com/mikeckennedy/umami-python/issues"
Source = "https://github.com/mikeckennedy/umami-python"

[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/tests",
    "/example_client",
    "setup.py",
    "settings.json",
    "/tox.ini",
]

[tool.hatch.build.targets.wheel]
packages = ["umami"]
exclude = [
    "/.github",
    "/tests",
    "/example_client",
    "setup.py",
    "settings.json",
    "/tox.ini",
] 