[project]
name = "umami-analytics"
description = "Umami Analytics Client for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = [
    "analytics",
    "website",
    "umami",
]
authors = [
    { name = "Michael Kennedy", email = "michael@talkpython.fm" },
]
classifiers = [
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Programming Language :: Python :: 3.15',
]
dependencies = [
    "httpx2",
    "pydantic",
]
version = "0.6.25"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    # Documentation site generator (Great Docs). Needs Python >= 3.11; the
    # package itself supports 3.10+, so guard it so `[dev]` still installs on 3.10.
    "great-docs; python_version >= '3.11'",
]


[project.urls]
Homepage = "https://github.com/mikeckennedy/umami-python"
Tracker = "https://github.com/mikeckennedy/umami-python/issues"
Source = "https://github.com/mikeckennedy/umami-python"

[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/tests",
    "/example_client",
    "setup.py",
    "settings.json",
    "/tox.ini",
]

[tool.hatch.build.targets.wheel]
packages = ["umami"]
exclude = [
    "/.github",
    "/tests",
    "/example_client",
    "setup.py",
    "settings.json",
    "/tox.ini",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
