[project]
name = "umami-analytics"
description = "Umami Analytics Client for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = [
    "analytics",
    "website",
    "umami",
    "web-analytics",
    "privacy",
    "privacy-friendly",
    "tracking",
    "metrics",
    "events",
    "page-views",
    "telemetry",
    "statistics",
    "self-hosted",
    "async",
    "httpx",
    "pydantic",
    "sdk",
    "api-client",
]
authors = [
    { name = "Michael Kennedy", email = "michael@talkpython.fm" },
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Programming Language :: Python :: 3.15',
    'Typing :: Typed',
]
dependencies = [
    "httpx2",
    "pydantic",
]
version = "1.0.0"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    # Documentation site generator (Great Docs). Needs Python >= 3.11; the
    # package itself supports 3.10+, so guard it so `[dev]` still installs on 3.10.
    "great-docs; python_version >= '3.11'",
    # Griffe extension that surfaces pydantic model fields (Field descriptions,
    # constraints) in the generated API reference. Same Python floor as great-docs.
    "griffe-pydantic; python_version >= '3.11'",
]


[project.urls]
Homepage = "https://github.com/mikeckennedy/umami-python"
Tracker = "https://github.com/mikeckennedy/umami-python/issues"
Source = "https://github.com/mikeckennedy/umami-python"
Documentation = "https://mkennedy.codes/docs/umami-python/"

[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/tests",
    "/example_client",
    "setup.py",
    "settings.json",
    "/tox.ini",
    "/umami/great-docs"
]

[tool.hatch.build.targets.wheel]
packages = ["umami"]
exclude = [
    "/.github",
    "/tests",
    "/example_client",
    "setup.py",
    "settings.json",
    "/tox.ini",
    "/umami/great-docs"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
